examples/avm-res-web-site/0.21.0/submodules/config_backup/README.md
<!-- BEGIN_TF_DOCS -->
<!-- Code generated by terraform-docs. DO NOT EDIT. -->
# config\_backup submodule

This submodule manages the backup configuration (`Microsoft.Web/sites/config`, name: `backup`) for an Azure App Service site.

It can be used independently to configure backup settings on an existing site.

<!-- markdownlint-disable MD033 -->
## Requirements

The following requirements are needed by this module:

- <a name="requirement_terraform"></a> [terraform](#requirement\_terraform) (~> 1.9)

- <a name="requirement_azapi"></a> [azapi](#requirement\_azapi) (~> 2.4)

## Resources

The following resources are used by this module:

- [azapi_update_resource.this](https://registry.terraform.io/providers/Azure/azapi/latest/docs/resources/update_resource) (resource)

<!-- markdownlint-disable MD013 -->
## Required Inputs

The following input variables are required:

### <a name="input_parent_id"></a> [parent\_id](#input\_parent\_id)

Description: The resource ID of the App Service site.

Type: `string`

## Optional Inputs

The following input variables are optional (have default values):

### <a name="input_backup_name"></a> [backup\_name](#input\_backup\_name)

Description: The name of the backup. If not set, a default name will be generated.

Type: `string`

Default: `null`

### <a name="input_enabled"></a> [enabled](#input\_enabled)

Description: Is backup enabled? Defaults to `true`.

Type: `bool`

Default: `true`

### <a name="input_schedule"></a> [schedule](#input\_schedule)

Description: The backup schedule configuration.

- `frequency_interval` - (Optional) How often the backup should be executed.
- `frequency_unit` - (Optional) The unit of time for the backup frequency. Possible values are `Day` and `Hour`.
- `keep_at_least_one_backup` - (Optional) Should at least one backup always be kept?
- `retention_period_days` - (Optional) The number of days to retain backups.
- `start_time` - (Optional) The start time for the backup schedule.

Type:

```hcl
object({
    frequency_interval       = optional(number)
    frequency_unit           = optional(string)
    keep_at_least_one_backup = optional(bool)
    retention_period_days    = optional(number)
    start_time               = optional(string)
  })
```

Default: `null`

### <a name="input_storage_account_url"></a> [storage\_account\_url](#input\_storage\_account\_url)

Description: The SAS URL to the Storage Account container for backup.

Type: `string`

Default: `null`

## Outputs

The following outputs are exported:

### <a name="output_name"></a> [name](#output\_name)

Description: The name of the config resource.

### <a name="output_resource"></a> [resource](#output\_resource)

Description: The full resource object.

### <a name="output_resource_id"></a> [resource\_id](#output\_resource\_id)

Description: The resource ID of the config resource.

## Modules

No modules.

<!-- markdownlint-disable-next-line MD041 -->
## Data Collection

The software may collect information about you and your use of the software and send it to Microsoft. Microsoft may use this information to provide services and improve our products and services. You may turn off the telemetry as described in the repository. There are also some features in the software that may enable you and Microsoft to collect data from users of your applications. If you use these features, you must comply with applicable law, including providing appropriate notices to users of your applications together with a copy of Microsoft's privacy statement. Our privacy statement is located at <https://go.microsoft.com/fwlink/?LinkID=824704>. You can learn more about data collection and use in the help documentation and our privacy statement. Your use of the software operates as your consent to these practices.
<!-- END_TF_DOCS -->
